<resources>
    <string name="app_name">Echo Practice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_connection_title">Not connected</string>
    <string name="no_connection">No network connection was found.</string>
    <string name="cancel">Cancel</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="title_activity_lesson">Choose your lesson</string>
    <string name="title_activity_practice">Practice</string>
    <string name="title_activity_transition">One more exercise</string>
    <string name="title_activity_lesson_completed">Congrats!</string>
    <string name="go_to_next_lesson">Go to next lesson</string>
    <string name="correct_sentences_in_this_lesson">correct sentences in this lesson.</string>
    <string name="exit">Exit</string>
    <string name="you_graduated_from">You graduated from</string>
    <string name="placeholder">placeholder</string>
    <string name="try_again">Try again</string>
    <string name="start_time">Start</string>
    <string name="finish_time">Finish</string>
    <string name="correct"># correct sentences</string>
    <string name="errors_percentage">Errors</string>
    <string name="title_activity_select_user">Echo Practice</string>
    <string name="log_in">Log in</string>
    <string name="quit_confirm">Confirmation</string>
    <string name="quit_text">Are you sure you want to go back and lose all the progress you have made?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="verify_internet_connection">Please, check your connection.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="password_check">Password again:</string>
    <string name="error_field_required">This information is required</string>
    <string name="error_invalid_email">A valid email is required</string>
    <string name="user_pass_not_found">Username or password did not check</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_add_user">Create an account</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name:</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="view_prizes">View Prizes</string>
    <string name="points">point(s)</string>
    <string name="qr_code_instructions">In order to get your prize, present this QrCode to the partner offering it</string>
    <string name="get_this_product">Get this prize</string>
    <string name="cost">Cost:</string>
    <string name="action_validate_code">Validate QRCode</string>
    <string name="action_view_prizes">My Prizes</string>
    <string name="title_activity_prizes">My prizes</string>
    <string name="product_name">Product: %1$s</string>
    <string name="partner_name">Partner: %1$s</string>
    <string name="partner_address">Address: %1$s</string>
    <string name="partner_phone">Phone: %1$s</string>
    <string name="no_prizes">You got no prizes so far. Keep practicing and trade your points.</string>

    <string name="facebook_app_id">542192119273493</string>
    <string name="banner_ad_unit_id">ca-app-pub-4511527372438796/7377519865</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4511527372438796/2444558664</string>
    <string name="exercise_not_found">No exercises found</string>
    <string name="practices_not_found">Practices not found</string>
    <string name="error_pass_mismatch">The passwords did not match</string>
    <string name="error_field_length">this field should contain at least 8 characteres</string>
    <string name="lesson_completed">Lesson Completed</string>
    <string name="continue_from_last_exercise">Continue from last exercise</string>
    <string name="continue_from_last_exercise_message">Do you want to continue from the exercise you stopped the last time you practiced this lesson?</string>
    <string name="you_completed_this_lesson">You have already completed this lesson</string>
    <string name="action_view_products">View products to trade</string>
    <string name="title_activity_account_instructions">AccountInstructionsActivity</string>
    <string name="create_account_instructions">We sent you an activation email. Please, open your email and click on Activate Account. Welcome to Echo Practice!</string>
    <string name="user_total_points">Awesome! Now, you have %1$s points</string>
    <string name="send_to_wallet">Send to bitcoin wallet</string>
    <string name="progress_mask">%1$s / %2$s</string>

</resources>
