<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/congrats_bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.englishapp.LessonCompletedActivity">


        <TextView
            android:id="@+id/txt_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/lesson_completed"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <Button
            android:id="@+id/view_prizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_correct"
            android:layout_centerHorizontal="true"
            android:background="#0063CF"
            android:onClick="viewPrizes"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/view_prizes"
            android:textColor="@android:color/white" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_prizes"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            ads:adSize="FLUID"
            ads:adUnitId="@string/banner_ad_unit_id" />
    </RelativeLayout>

</ScrollView>